Actually fixed label visibility when filtering and then mouseing over a node.

--- a/lab_space/styles/main-dark.css
+++ b/lab_space/styles/main-dark.css
@@ -37,7 +37,7 @@ a {
     max-width: 1080px;
     margin: 50px auto 20px auto !important;
     float: none !important;
-    background-color: #ffffff;
+    background-color: #242124;
     color: #fdeed8;
     display: flex;
     justify-content: center;
